# OSPSuite.SimModel

./: CLAUDE.md  OSPSuite.SimModel.sln  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  buildNix.sh  buildWindows.bat  packages.config
.github/workflows/: _build.yml  codeql-analysis.yml
src/OSPSuite.SimModelNative/: OSPSuite.SimModelNative.vcxproj
src/OSPSuite.SimModelNative/src/: SimulationOptions.cpp
tests/OSPSuite.SimModelNative.Tests/: CMakeLists.txt  MIGRATION_OVERVIEW.md  OSPSuite.SimModelNative.Tests.vcxproj  OSPSuite.SimModelNative.Tests.vcxproj.filters  README.md  packages.config
tests/OSPSuite.SimModelNative.Tests/src/: ConstantFormulaSpecs.cpp  ConstantFormulaTests.cpp  ErrorDataSpecs.cpp  ErrorDataTests.cpp  ExplicitFormulaSpecs.cpp  FormulaTests.cpp  MathHelperSpecs.cpp  MathHelperTests.cpp  OutputSchemaSpecs.cpp  OutputSchemaTests.cpp  ParameterSpecs.cpp  RcmSpecs.cpp  RcmTests.cpp  SimulationOptionsSpecs.cpp  SimulationOptionsTests.cpp  SimulationTaskSpecs.cpp  SolverWarningSpecs.cpp  SolverWarningTests.cpp  TObjectVectorTests.cpp  TableFormulaSpecs.cpp  TableFormulaTestExtender.h  TableFormulaWithOffsetSpecs.cpp  TableFormulaWithXArgumentSpecs.cpp  TestEnvironment.cpp  ValuePointTests.cpp
